--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "luarena-rs"
 version = "0.1.0"
 edition = "2021"
 
+[dependencies]
+float_eq = "1.0.1"
+
 [dependencies.mlua]
 version = "0.9.9"
 features = ["lua54", "vendored"]
