--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 float_eq = "1.0.1"
+quickcheck = "1.0.3"
+quickcheck_macros = "1.0.0"
 rand = "0.8.5"
 [dependencies.mlua]
 version = "0.9.9"
