--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ quickcheck = "1.0.3"
 quickcheck_macros = "1.0.0"
 rand = "0.8.5"
 serde = { version = "1.0.214", features = ["derive"] }
-serde_json = "1.0.132"
+serde_cbor = "0.11.2"
 [dependencies.mlua]
 version = "0.9.9"
 features = ["lua54", "vendored"]
