replace decrecated `serde_cbor` with `ciborium`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+ciborium = "0.2.2"
 float_eq = "1.0.1"
 quickcheck = "1.0.3"
 quickcheck_macros = "1.0.0"
 rand = "0.8.5"
 serde = { version = "1.0.214", features = ["derive"] }
-serde_cbor = "0.11.2"
 [dependencies.mlua]
 version = "0.9.9"
 features = ["lua54", "vendored"]
