poc: call a minimal player component

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ quickcheck_macros = "1.0.0"
 rand = "0.8.5"
 serde = { version = "1.0.214", features = ["derive"] }
 wasmtime = "26.0.1"
+wasmtime-wasi = "26.0.1"
 wit-bindgen = "0.34.0"
 [dependencies.mlua]
 version = "0.9.9"
