read player meta data from TOML
This way we don't need two different implementations/deserializations.

--- a/players/lloyd/meta.toml
+++ b/players/lloyd/meta.toml
@@ -1,4 +1,8 @@
 name = "Lloyd"
-color = { red = 20, green = 230, blue = 10 }
 version = "0.1.0"
 id = "019379de-ca27-7b13-a7bb-388606d6f0c8"
+
+[color]
+red = 20
+green = 230
+blue = 10
