--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+clap = { version = "4.5.23", features = ["derive"] }
 float_eq = "1.0.1"
 quickcheck = "1.0.3"
 quickcheck_macros = "1.0.0"
